k8s/apps/personal-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-site
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-site
  template:
    metadata:
      labels:
        app: personal-site
    spec:
      containers:
        - name: web
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello from zachsexton.com"
          ports:
            - containerPort: 5678
