k8s/apps/personal-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site
  namespace: web
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zachsexton.com
      secretName: zachsexton-com-tls
  rules:
    - host: zachsexton.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-site
                port:
                  number: 80
